plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.brife'
version = '0.0.1-SNAPSHOT'
description = 'swyp-app-project'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
	maven { url 'https://repo.spring.io/snapshot' }
}


dependencies {
	// ==========================================
	// Spring Boot Core
	// ==========================================
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-batch'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'

	// Spring Security
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly    'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly    'io.jsonwebtoken:jjwt-jackson:0.12.6'

	// ==========================================
	// Database & JPA
	// ==========================================
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	runtimeOnly    'org.postgresql:postgresql'

	// ==========================================
	// Google Cloud Auth (Vertex AI 인증)
	// ==========================================
    implementation 'com.google.firebase:firebase-admin:9.2.0'

	// ==========================================
	// HTTP / Crawling
	// ==========================================
	implementation 'org.jsoup:jsoup:1.17.2'
	implementation 'org.apache.httpcomponents.client5:httpclient5'

	// ==========================================
	// JSON
	// ==========================================
	implementation 'com.fasterxml.jackson.core:jackson-databind'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

	// ==========================================
	// Resilience4j
	// ==========================================
	implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.2.0'

	// ==========================================
	// Swagger
	// ==========================================
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.2'

	// ==========================================
	// Cache (Caffeine)
	// ==========================================
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'com.github.ben-manes.caffeine:caffeine'

	// ==========================================
	// Lombok
	// ==========================================
	compileOnly    'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// ==========================================
	// Test
	// ==========================================
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.batch:spring-batch-test'
	testRuntimeOnly    'org.junit.platform:junit-platform-launcher'

    // Firebase Admin SDK
    implementation 'com.google.firebase:firebase-admin:9.2.0'
}

springBoot {
	mainClass = 'com.brife.BriefBackendApplication'
}

tasks.named('bootJar') {
	mainClass = 'com.brife.BriefBackendApplication'
}

tasks.named('test') {
	useJUnitPlatform()
}